# LLM-Fine-Tuning-Distillation-Pipeline

./: .env.example  .gitignore  README.md  RUN_GUIDE.md  api_credentials.py  compae-dif-tec.docx  pyproject.toml  requirements.txt  setup.py
config/: training_config.yaml
datasets/: xsft.jsonl
docs/diagrams/: data-flow.mmd  system-architecture.mmd  training-pipeline.mmd
notebooks/: main_pipeline.ipynb  unsloth-finetuning.ipynb  unslouth_local.ipynb
src/: __init__.py  data_generator.py  data_loader.py  inference.py  models.py  trainer.py
